network_policy_concept/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: demo-pod
  labels:
    app: demo
spec:
  containers:
  - name: demo-container
    image: linuxserver/firefox
    ports:
    - containerPort: 3000

    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "500m"
        memory: "256Mi"

---

apiVersion: v1
kind: Pod
metadata:
  name: demo-pod-1
  labels:
    app: demo
spec:
  containers:
  - name: demo-container-1
    image: nginx
    ports:
    - containerPort: 80

    resources:
      requests:
        cpu: "100m"
        memory: "128Mi"
      limits:
        cpu: "500m"
        memory: "256Mi"
