network_policy_concept/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: restrict-policy 
spec:
  podSelector:
    matchLabels:
      app: demo
